concord_examples/tests/ui/rate_limit_endpoint_key_optional_param.stderr
error: rate_limit key binding cannot target an optional param
  --> tests/ui/rate_limit_endpoint_key_optional_param.rs:16:33
   |
16 |         rate_limit key region = region // ERROR: optional param
   |                                 ^^^^^^
